[package]
name = "obj-pool"
version = "0.6.0"
authors = ["Artem Shein <sc-github@aisys.ru>", "Stjepan Glavina <stjepang@gmail.com>"]
description = "A simple object arena"
repository = "https://github.com/artemshein/obj-pool"
documentation = "https://docs.rs/obj-pool"
readme = "README.md"
license = "Apache-2.0/MIT"
categories = ["memory-management"]
edition = "2024"

[badges]
travis-ci = { repository = "artemshein/obj-pool" }

[dependencies]
unreachable = "1.0.0"
parking_lot = "0.12.1"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serde_support = ["serde"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
slab = "0.4"

[[bench]]
name = "comparison"
harness = false
