[package]
name = "obj-pool"
version = "0.7.0"
authors = ["Artem Shein <sc-github@aisys.ru>", "Stjepan Glavina <stjepang@gmail.com>"]
description = "A simple object arena"
repository = "https://github.com/artemshein/obj-pool"
documentation = "https://docs.rs/obj-pool"
readme = "README.md"
license = "Apache-2.0 OR MIT"
categories = ["memory-management"]
edition = "2024"

[dependencies]
parking_lot = "0.12.5"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serde_support = ["serde"]

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
slab = "0.4"

[[bench]]
name = "comparison"
harness = false
